--- a/src/components/css-components/index.css
+++ b/src/components/css-components/index.css
@@ -2,3 +2,4 @@
 @import "./z-label/styles.css";
 @import "./z-link/styles.css";
 @import "./z-scrollbar/styles.css";
+@import "./z-cover/styles.css";
