chore: fix ZCover and add some enanchements

--- a/src/components/css-components/z-cover/styles.css
+++ b/src/components/css-components/z-cover/styles.css
@@ -4,11 +4,9 @@
   width: 115px;
   height: 175px;
   align-items: center;
-  padding: var(--space-unit);
 }
 
 .z-cover-stack {
-  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -19,9 +17,9 @@
   width: 115px;
   min-width: 115px;
   max-width: 115px;
-  height: 160px;
-  min-height: 160px;
-  max-height: 160px;
+  height: 175px;
+  min-height: 175px;
+  max-height: 175px;
 }
 
 /* Scaled sizes for multiple covers */
@@ -30,9 +28,9 @@
   width: 95px;
   min-width: 95px;
   max-width: 95px;
-  height: 140px;
-  min-height: 140px;
-  max-height: 140px;
+  height: 160px;
+  min-height: 160px;
+  max-height: 160px;
 }
 
 .z-cover-shadow {
@@ -65,6 +63,7 @@
   border-radius: 6px;
   box-shadow: 0 2px 8px rgb(0 0 0 / 12%);
   object-fit: cover;
+  object-position: left;
 }
 
 .z-cover-container.has-multiple .z-cover-img {
