chore: fix css due to review

--- a/src/components/result-card/z-result-card/styles.css
+++ b/src/components/result-card/z-result-card/styles.css
@@ -48,7 +48,6 @@
   min-width: 0;
   max-width: 100%;
   max-height: 2.4em;
-  margin-top: var(--space-unit);
   margin-bottom: 4px;
   -webkit-box-orient: vertical;
   font-size: var(--font-size-3);
@@ -70,7 +69,7 @@
   display: flex;
   max-width: 100%;
   flex-wrap: wrap;
-  margin-top: var(--space-unit);
+  margin-top: calc(var(--space-unit) * 2);
   gap: var(--space-unit);
 }
 
@@ -87,6 +86,10 @@
   display: flex;
   width: 100%;
   height: 75px;
+}
+
+:host(.info-card) .info-container {
+  justify-content: space-between;
 }
 
 .info-icon-column {
