--- a/src/components/table/cells/z-table-cells.css
+++ b/src/components/table/cells/z-table-cells.css
@@ -25,6 +25,12 @@
   z-index: 2;
 }
 
+:host(:focus) {
+  z-index: 20;
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
+
 .cell--content {
   display: flex;
   width: 100%;
