--- a/src/components/table/z-tr/styles.css
+++ b/src/components/table/z-tr/styles.css
@@ -56,17 +56,17 @@
   background-color: var(--color-background);
 }
 
+:host(:hover) {
+  position: relative;
+  z-index: 10;
+  box-shadow: 0 4px 4px -2px var(--shadow-color-base, rgb(0 0 0 / 20%));
+}
+
 :host(:focus) {
   position: relative;
   z-index: 20;
   box-shadow: var(--shadow-focus-primary);
   outline: none;
-}
-
-:host(:hover) {
-  position: relative;
-  z-index: 10;
-  box-shadow: 0 4px 4px -2px var(--shadow-color-base, rgb(0 0 0 / 20%));
 }
 
 .z-tr--expand-button-container {
@@ -118,4 +118,12 @@
     0 0 0 2px var(--shadow-focus-primary),
     var(--shadow-focus-primary);
   outline: none;
+}
+
+:host(:focus) ::slotted(*) {
+  border-bottom: none;
+}
+
+:host(:focus) .z-tr--expand-button-container {
+  border-bottom: none;
 }
