chore(DS-905): fix

--- a/src/components/table/z-table/styles.css
+++ b/src/components/table/z-table/styles.css
@@ -7,7 +7,7 @@
   min-width: max-content;
   max-width: 100%;
   box-sizing: border-box;
-  padding: 8px;
+  padding: var(--space-unit);
   background-color: var(--color-surface01);
 }
 
