--- a/src/components/table/cells/z-table-cells.css
+++ b/src/components/table/cells/z-table-cells.css
@@ -3,7 +3,7 @@
   display: flex;
   max-width: 100%;
   align-items: center;
-  padding: var(--z-table--cells-padding, calc(var(--space-unit) * 2));
+  padding: calc(var(--z-table--cells-padding, calc(var(--space-unit) * 2)));
   background-color: var(--color-surface01);
   gap: calc(var(--space-unit) * 2) var(--space-unit);
 }
