--- a/src/components/z-anchor-navigation/index.stories.css
+++ b/src/components/z-anchor-navigation/index.stories.css
@@ -1,4 +1,5 @@
-.z-anchor-navigation-story-wrapper {
+.z-anchor-navigation-story-wrapper,
+.z-anchor-navigation-story-wrapper.collapsed {
   display: flex;
   flex-direction: column;
   gap: 16px;
