--- a/src/components/z-popover/index.stories.css
+++ b/src/components/z-popover/index.stories.css
@@ -3,9 +3,14 @@
   display: flex;
   width: 100%;
   min-height: 400px;
+  box-sizing: border-box;
   align-items: center;
   justify-content: center;
   background: var(--gray200);
+
+  * {
+    box-sizing: border-box;
+  }
 }
 
 .popover-content {
@@ -17,4 +22,26 @@
   --z-icon-height: 32px;
 
   cursor: pointer;
+}
+
+.popover-container-tooltip {
+  height: 2000px;
+
+  .popover-internal-container {
+    position: relative;
+    overflow: auto;
+    width: 100%;
+    height: 400px;
+    background-color: aqua;
+
+    .popover-internal-container-2 {
+      display: flex;
+      overflow: auto;
+      width: 100%;
+      height: 800px;
+      align-items: center;
+      justify-content: center;
+      background-color: tomato;
+    }
+  }
 }
