--- a/src/components/z-popover/index.stories.css
+++ b/src/components/z-popover/index.stories.css
@@ -14,6 +14,8 @@
 }
 
 .popover-content {
+  max-width: 400px;
+  max-height: 150px;
   text-align: left;
 }
 
@@ -28,7 +30,6 @@
   height: 2000px;
 
   .popover-internal-container {
-    position: relative;
     overflow: auto;
     width: 100%;
     height: 400px;
@@ -38,7 +39,7 @@
       display: flex;
       overflow: auto;
       width: 100%;
-      height: 800px;
+      height: 1000px;
       align-items: center;
       justify-content: center;
       background-color: tomato;
