chore: add safe space; adjust positions order; enhance max sizes assignment

--- a/src/components/z-popover/styles.css
+++ b/src/components/z-popover/styles.css
@@ -6,6 +6,8 @@
 
   position: fixed;
   display: none;
+  max-width: calc(100% - var(--grid-margin) * 2);
+  max-height: calc(100% - var(--grid-margin) * 2);
   align-items: center;
   justify-content: center;
   padding: var(--z-popover-padding, 0);
