chore: fix code style

--- a/src/components/z-card/styles.css
+++ b/src/components/z-card/styles.css
@@ -161,7 +161,7 @@ Unfortunately the `aspect-ratio` property is still experimental */
   border-radius: var(--z-card--text-border-radius);
 }
 
-:host([variant="text"]) [slot='text']::before {
+:host([variant="text"]) [slot="text"]::before {
   border-radius: var(--z-card--text-border-radius);
 }
 
