fix: refactor z-select css in order to enable the focus

--- a/src/components/list/z-list-element/styles.css
+++ b/src/components/list/z-list-element/styles.css
@@ -59,6 +59,7 @@
 :host([expandable]:focus:focus-visible) > .container,
 :host([clickable]:focus:focus-visible) > .container {
   position: relative;
+  z-index: 1;
   box-shadow: var(--shadow-focus-primary);
 }
 
