--- a/src/components/result-card/z-result-card/styles.css
+++ b/src/components/result-card/z-result-card/styles.css
@@ -53,6 +53,10 @@
   word-break: break-word;
 }
 
+.card-title > * {
+  all: unset;
+}
+
 .card-subtitle {
   overflow: hidden;
   color: var(--color-default-text);
