--- a/src/components/z-toast-notification/styles.css
+++ b/src/components/z-toast-notification/styles.css
@@ -212,9 +212,9 @@
   fill: var(--color-primary01-icon);
 }
 
-:host > #external-container.light #text,
-:host > #external-container.warning #text {
-  color: var(--color-default-text);
+:host .light #text,
+:host .warning #text {
+  color: var(--color-default-text) !important;
 }
 
 :host > #external-container.accent {
