--- a/src/components/z-toast-notification/styles.css
+++ b/src/components/z-toast-notification/styles.css
@@ -212,9 +212,14 @@
   fill: var(--color-primary01-icon);
 }
 
-:host .light #text,
+/* :host .light #text,
 :host .warning #text {
   color: var(--color-default-text) !important;
+} */
+
+:host > #external-container.light #inner-container #text,
+:host > #external-container.warning #inner-container #text {
+  color: var(--color-default-text);
 }
 
 :host > #external-container.accent {
