--- a/src/components/result-card/z-result-card/styles.css
+++ b/src/components/result-card/z-result-card/styles.css
@@ -123,7 +123,7 @@
   white-space: nowrap;
 }
 
-.card-subtitle.info-subtitle {
+.card-subtitle.info-card-subtitle {
   display: -webkit-box;
   overflow: hidden;
   -webkit-box-orient: vertical;
@@ -168,7 +168,7 @@
   border-radius: var(--border-size-large);
 }
 
-.card-title.info-title {
+.card-title.info-card-title {
   display: -webkit-box;
   overflow: hidden;
   min-width: 0;
