feat: add backdrop offcanvas and menu button slot to app header

--- a/src/components/z-app-header/styles.css
+++ b/src/components/z-app-header/styles.css
@@ -243,7 +243,8 @@ z-searchbar {
   white-space: nowrap;
 }
 
-.drawer-trigger {
+.drawer-trigger,
+::slotted([slot="menu-button"]) {
   display: flex;
   height: calc(var(--title-font-size) * var(--title-line-height));
   align-items: center;
