--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -73,7 +73,7 @@
   transition: none;
 }
 
-.canvas-background {
+.backdrop {
   z-index: 1000;
   width: 100%;
   height: 100%;
@@ -83,7 +83,7 @@
   transition: opacity 0.4s ease-out;
 }
 
-:host([open]) > .canvas-background {
+:host([open]) > .backdrop {
   opacity: 0.7;
   pointer-events: unset;
 }
@@ -102,8 +102,8 @@
   }
 
   .canvas-container {
-    width: max(var(--z-offcanvas--container-width, 375px), 375px);
-    min-width: 375px;
+    width: var(--z-offcanvas--container-width, 375px);
+    min-width: var(--z-offcanvas--container-width, 375px);
   }
 
   :host([transitiondirection="up"]) > .canvas-container {
