--- a/src/components/z-book-cover/styles.css
+++ b/src/components/z-book-cover/styles.css
@@ -4,20 +4,25 @@
 }
 
 :host {
-  --z-book-cover-width: 288px;
   --z-book-cover-height: 378px;
   --z-book-cover-border-radius: var(--border-radius);
-  --z-book-cover-stack-offset-x: 8px;
-  --z-book-cover-stack-offset-y: 12px;
-  --z-book-cover-vertical-alignment: end;
-  --z-book-cover-horizontal-alignment: start;
+  --z-book-cover-stack-shift-x: 8px;
+  --z-book-cover-stack-shift-y: 12px;
+  --private_book-cover-width: round(nearest, var(--z-book-cover-height) / 1.33, 1px);
 
   position: relative;
   display: flex;
-  width: var(--z-book-cover-width);
+  width: var(--private_book-cover-width);
   max-width: 100%;
   height: var(--z-book-cover-height);
   max-height: 100%;
+}
+
+@supports not (width: round(1px, 1px)) {
+  /* If the `round()` function isn't supported, fallback to the float value */
+  :host {
+    --private_book-cover-width: calc(var(--z-book-cover-height) / 1.33);
+  }
 }
 
 :host > * {
@@ -30,8 +35,8 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  align-items: var(--z-book-cover-vertical-alignment, start);
-  justify-content: var(--z-book-cover-horizontal-alignment, start);
+  align-items: start;
+  justify-content: center;
   border-radius: var(--z-book-cover-border-radius);
 }
 
@@ -41,10 +46,10 @@ img {
 }
 
 :host([multiple]) {
-  width: calc(var(--z-book-cover-width) - (var(--z-book-cover-stack-offset-x) * 2));
-  height: calc(var(--z-book-cover-height) - (var(--z-book-cover-stack-offset-y) * 2));
-  margin-bottom: calc(var(--z-book-cover-stack-offset-y) * 2);
-  margin-left: calc(var(--z-book-cover-stack-offset-x) * 2);
+  width: calc(var(--private_book-cover-width) - (var(--z-book-cover-stack-shift-x) * 2));
+  height: calc(var(--z-book-cover-height) - (var(--z-book-cover-stack-shift-y) * 2));
+  margin-bottom: calc(var(--z-book-cover-stack-shift-y) * 2);
+  margin-left: calc(var(--z-book-cover-stack-shift-x) * 2);
 }
 
 :host([bordered]) .cover-container,
@@ -54,8 +59,8 @@ img {
 
 .stack-shadow {
   position: absolute;
-  top: calc(var(--z-book-cover-stack-offset-y) * 2);
-  left: calc(var(--z-book-cover-stack-offset-x) * -2);
+  top: calc(var(--z-book-cover-stack-shift-y) * 2);
+  left: calc(var(--z-book-cover-stack-shift-x) * -2);
   width: 100%;
   height: 100%;
   border: var(--border-size-small) solid var(--color-surface05);
@@ -63,6 +68,6 @@ img {
 }
 
 .stack-shadow:nth-child(2) {
-  top: var(--z-book-cover-stack-offset-y);
-  left: calc(-1 * var(--z-book-cover-stack-offset-x));
+  top: var(--z-book-cover-stack-shift-y);
+  left: calc(-1 * var(--z-book-cover-stack-shift-x));
 }
