fix: z-select grouped and tree style

--- a/src/components/list/z-list-element/styles.css
+++ b/src/components/list/z-list-element/styles.css
@@ -30,7 +30,7 @@
 }
 
 :host([size="medium"]) > .tree-element-container {
-  padding-top: var(--space-unit);
+  padding-top: 0;
   padding-bottom: 0;
 }
 
