--- a/src/components/z-select/styles.css
+++ b/src/components/z-select/styles.css
@@ -53,8 +53,8 @@
 
 .select-wrapper z-list {
   --background-color-list-element: var(--color-form-background);
-  --background-hover-color-list-element: var(--color-form-surface03);
-  --background-active-color-list-element: var(--color-form-surface03);
+  --background-hover-color-list-element: var(--color-form-surface02);
+  --background-active-color-list-element: var(--color-form-surface02);
 }
 
 .select-wrapper .ul-scroll-wrapper > z-list {
@@ -212,6 +212,11 @@ z-list-element > .list-element:focus:focus-visible {
   outline: none;
 }
 
+z-list-element > .list-element:hover,
+z-list-element > .list-element:hover::after {
+  background-color: var(--background-hover-color-list-element, var(--color-background));
+}
+
 z-list-element > .list-element .item.ellipsis {
   overflow: hidden;
 }
@@ -222,7 +227,7 @@ z-list-element .list-element::after {
   right: -1px;
   display: block;
   width: 100%;
-  height: 40px;
+  height: 45px;
   content: "";
   transform: translateX(-100%);
 }
@@ -237,7 +242,7 @@ z-list-element.tree-search-item .list-element::after {
   right: -25px;
   display: block;
   width: 100%;
-  height: 40px;
+  height: 45px;
   content: "";
   transform: translateX(-100%);
 }
@@ -248,17 +253,17 @@ z-list-element.grouped-tree-parent-node .list-element::after {
   right: -25px;
   display: block;
   width: 100%;
-  height: 40px;
+  height: 45px;
   content: "";
   transform: translateX(-100%);
 }
 
-z-list-element:not([disabled]) > .list-element:hover,
+/* z-list-element:not([disabled]) > .list-element:hover,
 z-list-element:not([disabled]) > .list-element:hover::after {
   z-index: -1;
   background-color: var(--color-form-surface03);
   cursor: pointer;
-}
+} */
 
 .item-label.selected {
   font-weight: bold;
@@ -281,7 +286,7 @@ z-list > z-list-group > z-list-element.grouped-tree-parent-node > .list-element:
   right: -18px;
   display: block;
   width: 100%;
-  height: 40px;
+  height: 45px;
   content: "";
   transform: translateX(-100%);
 }
@@ -293,7 +298,7 @@ z-list-element > .list-element:hover::after {
   right: 0;
   display: block;
   width: 100%;
-  height: 40px;
+  height: 45px;
   content: "";
   transform: translateX(-100%);
 }
