--- a/src/components/z-select/styles.css
+++ b/src/components/z-select/styles.css
@@ -53,8 +53,8 @@
 
 .select-wrapper z-list {
   --background-color-list-element: var(--color-form-background);
-  --background-hover-color-list-element: var(--color-form-surface02);
-  --background-active-color-list-element: var(--color-form-surface02);
+  --background-hover-color-list-element: var(--color-surface02);
+  --background-active-color-list-element: var(--color-surface02);
 }
 
 .select-wrapper .ul-scroll-wrapper > z-list {
