--- a/src/components/z-combobox/styles.css
+++ b/src/components/z-combobox/styles.css
@@ -36,10 +36,6 @@
   font-size: var(--font-size-2);
 }
 
-:host([size="x-small"]) > div > .header p.body-3 {
-  padding: calc(var(--space-unit) * 0.5) 0;
-}
-
 :host > div > .header:hover {
   outline: var(--border-size-medium) solid var(--color-form-surface04);
   outline-offset: -2px;
@@ -51,12 +47,7 @@
   outline: none;
 }
 
-:host > div > .header > p.body-3 {
-  padding: var(--space-unit) 0;
-  margin: 0;
-}
-
-:host > div > .header > p.body-3 > span {
+:host > div > .header > span.body-3 > span {
   font-weight: var(--font-sb);
 }
 
@@ -86,7 +77,7 @@
   fill: var(--color-form-disabled01-icon);
 }
 
-:host > div.disabled .header > p.body-3 {
+:host > div.disabled .header > span.body-3 {
   color: var(--color-form-disabled03);
 }
 
